Swagger updates from 2019-08-21
